<resources>
    <string name="app_name">MovieApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_search_hint">Enter movie name or category</string>
    <string name="redact_a_movie">You can contribute to the database by either </string>
    <string name="delete_a_movie">You can delete a fake movie which helps us to maintain a clean database</string>
    <string name="redact_a_movie_btn">Redact a movie</string>
    <string name="or">OR</string>
    <string name="delete_a_movie_btn">Delete a movie</string>
    <string name="save_changes_btn">save changes</string>
    <string name="redact_movie_name">Redact movie name:</string>
    <string name="add_or_redact_genre">Add/Redact genre(s):</string>
    <string name="change_year">Change year:</string>
    <string name="change_duration">Change duration:</string>
    <string name="change_redact_description">Change/Redact description</string>
    <string name="delete_warning">Warning!!!</string>



    <string name="year_prompt">Choose year</string>
    <string name="duration_prompt">Choose duration</string>

    <string name="aboutApp_info">
        This application is demo application and is part of a course project in Teleric Academy.
        The app is designed to create a movie database and meet the demands of the greatest movie admirers.
        The films are classics of the century and are presented in good style.
        The app contains information about several dozen movies, there is an option for users to add
        their favorite movie, there is information about the application itself and the ability for the user to report.
        The app also allows the user to vote for their favorite movie.
        Application development has been made possible thanks to Android Studio and SpringMVC REST services.
        Developed the app:
        Georgi Delchev and Kristian Evtimov.</string>
    <string name="btn_delete_yes">Yes</string>
    <string name="btn_delete_no">No</string>
    <string name="changes_applied">CHANGES APPLIED</string>
    <string name="dialog_redact_msg">Thank you for helping us maintaining clean and accurate database.You can: </string>
    <string name="redact_another_one">Redact another</string>
    <string name="btn_go_back">Go back</string>
    <string name="delete_another">Delete Another</string>
    <string name="enter_movie_name">Enter movie name</string>


    <string-array name="years_array">
        <item>2018</item><item>2017</item><item>2016</item><item>2015</item><item>2014</item><item>2013</item>
        <item>2012</item><item>2011</item><item>2010</item><item>2009</item><item>2008</item><item>2007</item>
        <item>2006</item><item>2005</item><item>2004</item><item>2003</item><item>2002</item><item>2001</item>
        <item>2000</item><item>1999</item><item>1998</item><item>1997</item><item>1996</item><item>1995</item>
        <item>1994</item><item>1993</item><item>1992</item><item>1991</item><item>1990</item><item>1989</item>
        <item>1988</item><item>1987</item><item>1986</item><item>1985</item><item>1984</item><item>1983</item>
        <item>1982</item><item>1981</item><item>1980</item><item>1979</item><item>1978</item><item>1977</item>
        <item>1976</item><item>1975</item><item>1974</item><item>1973</item><item>1972</item><item>1971</item><item>1970</item>

    </string-array>

    <string-array name="duration_array">
        <item>30</item><item>60</item><item>90</item>
        <item>100</item><item>120</item><item>145</item>
        <item>150</item><item>160</item><item>170</item>
        <item>180</item>
    </string-array>
</resources>
