<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_changes_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f9f33b"
        android:text="@string/changes_applied"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:textSize="25sp"
        android:id="@+id/tv_thank_you_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_changes_delete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_redact_msg"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:textAlignment="center"
        android:id="@+id/btn_delete_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="220dp"
        android:text="@string/delete_another" />

    <Button
        android:id="@+id/btn_go_back_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_delete_another"
        android:layout_marginEnd="67dp"
        android:text="@string/btn_go_back" />

</RelativeLayout>