<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/tv_delete_warning"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:text="@string/delete_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_delete_film"
        android:layout_marginTop="10dp"
        android:text="Placeholder"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_delete_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button

        android:id="@+id/btn_delete_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_delete_no"
        android:layout_marginEnd="91dp"
        android:text="@string/btn_delete_yes"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_delete_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="188dp"
        android:text="@string/btn_delete_no"
        android:textStyle="bold" />

</RelativeLayout>